--- a/semana1/index.html
+++ b/semana1/index.html
@@ -7,6 +7,8 @@
     <title>Document</title>
   </head>
   <body>
+    <a href="./hipervinculos.html" target="_blank">Hipervinculos</a>
+    <a href="./mundial.html" target="_blank">Mundial</a>
     <h1>Hola Mundo</h1>
     <h3>Creado en test</h3>
   </body>
